feat(new-list): repository method for list query
