# internal/infrastructure/ports/grpc/proto_gen/grpc/new.pb.go
@@ -72,6 +72,52 @@ func (Status) EnumDescriptor() ([]byte, []int) {
 	return file_new_proto_rawDescGZIP(), []int{0}
 }
 
+type Sort int32
+
+const (
+	Sort_DESC Sort = 0
+	Sort_ASC  Sort = 1
+)
+
+// Enum value maps for Sort.
+var (
+	Sort_name = map[int32]string{
+		0: "DESC",
+		1: "ASC",
+	}
+	Sort_value = map[string]int32{
+		"DESC": 0,
+		"ASC":  1,
+	}
+)
+
+func (x Sort) Enum() *Sort {
+	p := new(Sort)
+	*p = x
+	return p
+}
+
+func (x Sort) String() string {
+	return protoimpl.X.EnumStringOf(x.Descriptor(), protoreflect.EnumNumber(x))
+}
+
+func (Sort) Descriptor() protoreflect.EnumDescriptor {
+	return file_new_proto_enumTypes[1].Descriptor()
+}
+
+func (Sort) Type() protoreflect.EnumType {
+	return &file_new_proto_enumTypes[1]
+}
+
+func (x Sort) Number() protoreflect.EnumNumber {
+	return protoreflect.EnumNumber(x)
+}
+
+// Deprecated: Use Sort.Descriptor instead.
+func (Sort) EnumDescriptor() ([]byte, []int) {
+	return file_new_proto_rawDescGZIP(), []int{1}
+}
+
 type Media struct {
 	state         protoimpl.MessageState
 	sizeCache     protoimpl.SizeCache
@@ -329,8 +375,8 @@ type ListRequest struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	Sort   *int32  `protobuf:"varint,1,opt,name=Sort,proto3,oneof" json:"Sort,omitempty"`
-	Author *int32  `protobuf:"varint,2,opt,name=Author,proto3,oneof" json:"Author,omitempty"`
+	Sort   *Sort   `protobuf:"varint,1,opt,name=Sort,proto3,enum=grpc.Sort,oneof" json:"Sort,omitempty"`
+	Author *UUID   `protobuf:"bytes,2,opt,name=Author,proto3,oneof" json:"Author,omitempty"`
 	Status *Status `protobuf:"varint,3,opt,name=Status,proto3,enum=grpc.Status,oneof" json:"Status,omitempty"`
 	Query  *string `protobuf:"bytes,4,opt,name=Query,proto3,oneof" json:"Query,omitempty"`
 	Page   *int32  `protobuf:"varint,5,opt,name=Page,proto3,oneof" json:"Page,omitempty"`
@@ -368,18 +414,18 @@ func (*ListRequest) Descriptor() ([]byte, []int) {
 	return file_new_proto_rawDescGZIP(), []int{4}
 }
 
-func (x *ListRequest) GetSort() int32 {
+func (x *ListRequest) GetSort() Sort {
 	if x != nil && x.Sort != nil {
 		return *x.Sort
 	}
-	return 0
+	return Sort_DESC
 }
 
-func (x *ListRequest) GetAuthor() int32 {
-	if x != nil && x.Author != nil {
-		return *x.Author
+func (x *ListRequest) GetAuthor() *UUID {
+	if x != nil {
+		return x.Author
 	}
-	return 0
+	return nil
 }
 
 func (x *ListRequest) GetStatus() Status {
@@ -545,32 +591,35 @@ var file_new_proto_rawDesc = []byte{
 	0x74, 0x61, 0x74, 0x75, 0x73, 0x46, 0x69, 0x6c, 0x74, 0x65, 0x72, 0x12, 0x24, 0x0a, 0x06, 0x53,
 	0x74, 0x61, 0x74, 0x75, 0x73, 0x18, 0x01, 0x20, 0x03, 0x28, 0x0e, 0x32, 0x0c, 0x2e, 0x67, 0x72,
 	0x70, 0x63, 0x2e, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x52, 0x06, 0x53, 0x74, 0x61, 0x74, 0x75,
-	0x73, 0x22, 0xd4, 0x01, 0x0a, 0x0b, 0x4c, 0x69, 0x73, 0x74, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73,
-	0x74, 0x12, 0x17, 0x0a, 0x04, 0x53, 0x6f, 0x72, 0x74, 0x18, 0x01, 0x20, 0x01, 0x28, 0x05, 0x48,
-	0x00, 0x52, 0x04, 0x53, 0x6f, 0x72, 0x74, 0x88, 0x01, 0x01, 0x12, 0x1b, 0x0a, 0x06, 0x41, 0x75,
-	0x74, 0x68, 0x6f, 0x72, 0x18, 0x02, 0x20, 0x01, 0x28, 0x05, 0x48, 0x01, 0x52, 0x06, 0x41, 0x75,
-	0x74, 0x68, 0x6f, 0x72, 0x88, 0x01, 0x01, 0x12, 0x29, 0x0a, 0x06, 0x53, 0x74, 0x61, 0x74, 0x75,
-	0x73, 0x18, 0x03, 0x20, 0x01, 0x28, 0x0e, 0x32, 0x0c, 0x2e, 0x67, 0x72, 0x70, 0x63, 0x2e, 0x53,
-	0x74, 0x61, 0x74, 0x75, 0x73, 0x48, 0x02, 0x52, 0x06, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x88,
-	0x01, 0x01, 0x12, 0x19, 0x0a, 0x05, 0x51, 0x75, 0x65, 0x72, 0x79, 0x18, 0x04, 0x20, 0x01, 0x28,
-	0x09, 0x48, 0x03, 0x52, 0x05, 0x51, 0x75, 0x65, 0x72, 0x79, 0x88, 0x01, 0x01, 0x12, 0x17, 0x0a,
-	0x04, 0x50, 0x61, 0x67, 0x65, 0x18, 0x05, 0x20, 0x01, 0x28, 0x05, 0x48, 0x04, 0x52, 0x04, 0x50,
-	0x61, 0x67, 0x65, 0x88, 0x01, 0x01, 0x42, 0x07, 0x0a, 0x05, 0x5f, 0x53, 0x6f, 0x72, 0x74, 0x42,
-	0x09, 0x0a, 0x07, 0x5f, 0x41, 0x75, 0x74, 0x68, 0x6f, 0x72, 0x42, 0x09, 0x0a, 0x07, 0x5f, 0x53,
-	0x74, 0x61, 0x74, 0x75, 0x73, 0x42, 0x08, 0x0a, 0x06, 0x5f, 0x51, 0x75, 0x65, 0x72, 0x79, 0x42,
-	0x07, 0x0a, 0x05, 0x5f, 0x50, 0x61, 0x67, 0x65, 0x22, 0x1d, 0x0a, 0x0b, 0x49, 0x6e, 0x66, 0x6f,
-	0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x0e, 0x0a, 0x02, 0x49, 0x64, 0x18, 0x01, 0x20,
-	0x01, 0x28, 0x09, 0x52, 0x02, 0x49, 0x64, 0x22, 0x18, 0x0a, 0x06, 0x53, 0x74, 0x72, 0x69, 0x6e,
-	0x67, 0x12, 0x0e, 0x0a, 0x02, 0x49, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x02, 0x49,
-	0x64, 0x2a, 0x2d, 0x0a, 0x06, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x12, 0x0c, 0x0a, 0x08, 0x49,
-	0x4e, 0x41, 0x43, 0x54, 0x49, 0x56, 0x45, 0x10, 0x00, 0x12, 0x0a, 0x0a, 0x06, 0x41, 0x43, 0x54,
-	0x49, 0x56, 0x45, 0x10, 0x01, 0x12, 0x09, 0x0a, 0x05, 0x44, 0x52, 0x41, 0x46, 0x54, 0x10, 0x02,
-	0x32, 0x43, 0x0a, 0x04, 0x4e, 0x65, 0x77, 0x73, 0x12, 0x3b, 0x0a, 0x04, 0x4c, 0x69, 0x73, 0x74,
-	0x12, 0x11, 0x2e, 0x67, 0x72, 0x70, 0x63, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x52, 0x65, 0x71, 0x75,
-	0x65, 0x73, 0x74, 0x1a, 0x0e, 0x2e, 0x67, 0x72, 0x70, 0x63, 0x2e, 0x4e, 0x65, 0x77, 0x73, 0x4c,
-	0x69, 0x73, 0x74, 0x22, 0x10, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0a, 0x12, 0x08, 0x2f, 0x76, 0x31,
-	0x2f, 0x6e, 0x65, 0x77, 0x73, 0x42, 0x08, 0x5a, 0x06, 0x2e, 0x2f, 0x67, 0x72, 0x70, 0x63, 0x62,
-	0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x73, 0x22, 0xec, 0x01, 0x0a, 0x0b, 0x4c, 0x69, 0x73, 0x74, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73,
+	0x74, 0x12, 0x23, 0x0a, 0x04, 0x53, 0x6f, 0x72, 0x74, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0e, 0x32,
+	0x0a, 0x2e, 0x67, 0x72, 0x70, 0x63, 0x2e, 0x53, 0x6f, 0x72, 0x74, 0x48, 0x00, 0x52, 0x04, 0x53,
+	0x6f, 0x72, 0x74, 0x88, 0x01, 0x01, 0x12, 0x27, 0x0a, 0x06, 0x41, 0x75, 0x74, 0x68, 0x6f, 0x72,
+	0x18, 0x02, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x0a, 0x2e, 0x67, 0x72, 0x70, 0x63, 0x2e, 0x55, 0x55,
+	0x49, 0x44, 0x48, 0x01, 0x52, 0x06, 0x41, 0x75, 0x74, 0x68, 0x6f, 0x72, 0x88, 0x01, 0x01, 0x12,
+	0x29, 0x0a, 0x06, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x18, 0x03, 0x20, 0x01, 0x28, 0x0e, 0x32,
+	0x0c, 0x2e, 0x67, 0x72, 0x70, 0x63, 0x2e, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x48, 0x02, 0x52,
+	0x06, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x88, 0x01, 0x01, 0x12, 0x19, 0x0a, 0x05, 0x51, 0x75,
+	0x65, 0x72, 0x79, 0x18, 0x04, 0x20, 0x01, 0x28, 0x09, 0x48, 0x03, 0x52, 0x05, 0x51, 0x75, 0x65,
+	0x72, 0x79, 0x88, 0x01, 0x01, 0x12, 0x17, 0x0a, 0x04, 0x50, 0x61, 0x67, 0x65, 0x18, 0x05, 0x20,
+	0x01, 0x28, 0x05, 0x48, 0x04, 0x52, 0x04, 0x50, 0x61, 0x67, 0x65, 0x88, 0x01, 0x01, 0x42, 0x07,
+	0x0a, 0x05, 0x5f, 0x53, 0x6f, 0x72, 0x74, 0x42, 0x09, 0x0a, 0x07, 0x5f, 0x41, 0x75, 0x74, 0x68,
+	0x6f, 0x72, 0x42, 0x09, 0x0a, 0x07, 0x5f, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x42, 0x08, 0x0a,
+	0x06, 0x5f, 0x51, 0x75, 0x65, 0x72, 0x79, 0x42, 0x07, 0x0a, 0x05, 0x5f, 0x50, 0x61, 0x67, 0x65,
+	0x22, 0x1d, 0x0a, 0x0b, 0x49, 0x6e, 0x66, 0x6f, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12,
+	0x0e, 0x0a, 0x02, 0x49, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x02, 0x49, 0x64, 0x22,
+	0x18, 0x0a, 0x06, 0x53, 0x74, 0x72, 0x69, 0x6e, 0x67, 0x12, 0x0e, 0x0a, 0x02, 0x49, 0x64, 0x18,
+	0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x02, 0x49, 0x64, 0x2a, 0x2d, 0x0a, 0x06, 0x53, 0x74, 0x61,
+	0x74, 0x75, 0x73, 0x12, 0x0c, 0x0a, 0x08, 0x49, 0x4e, 0x41, 0x43, 0x54, 0x49, 0x56, 0x45, 0x10,
+	0x00, 0x12, 0x0a, 0x0a, 0x06, 0x41, 0x43, 0x54, 0x49, 0x56, 0x45, 0x10, 0x01, 0x12, 0x09, 0x0a,
+	0x05, 0x44, 0x52, 0x41, 0x46, 0x54, 0x10, 0x02, 0x2a, 0x19, 0x0a, 0x04, 0x53, 0x6f, 0x72, 0x74,
+	0x12, 0x08, 0x0a, 0x04, 0x44, 0x45, 0x53, 0x43, 0x10, 0x00, 0x12, 0x07, 0x0a, 0x03, 0x41, 0x53,
+	0x43, 0x10, 0x01, 0x32, 0x43, 0x0a, 0x04, 0x4e, 0x65, 0x77, 0x73, 0x12, 0x3b, 0x0a, 0x04, 0x4c,
+	0x69, 0x73, 0x74, 0x12, 0x11, 0x2e, 0x67, 0x72, 0x70, 0x63, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x52,
+	0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x0e, 0x2e, 0x67, 0x72, 0x70, 0x63, 0x2e, 0x4e, 0x65,
+	0x77, 0x73, 0x4c, 0x69, 0x73, 0x74, 0x22, 0x10, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0a, 0x12, 0x08,
+	0x2f, 0x76, 0x31, 0x2f, 0x6e, 0x65, 0x77, 0x73, 0x42, 0x08, 0x5a, 0x06, 0x2e, 0x2f, 0x67, 0x72,
+	0x70, 0x63, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -585,38 +634,41 @@ func file_new_proto_rawDescGZIP() []byte {
 	return file_new_proto_rawDescData
 }
 
-var file_new_proto_enumTypes = make([]protoimpl.EnumInfo, 1)
+var file_new_proto_enumTypes = make([]protoimpl.EnumInfo, 2)
 var file_new_proto_msgTypes = make([]protoimpl.MessageInfo, 7)
 var file_new_proto_goTypes = []interface{}{
 	(Status)(0),                   // 0: grpc.Status
-	(*Media)(nil),                 // 1: grpc.Media
-	(*New)(nil),                   // 2: grpc.New
-	(*NewsList)(nil),              // 3: grpc.NewsList
-	(*ListStatusFilter)(nil),      // 4: grpc.ListStatusFilter
-	(*ListRequest)(nil),           // 5: grpc.ListRequest
-	(*InfoRequest)(nil),           // 6: grpc.InfoRequest
-	(*String)(nil),                // 7: grpc.String
-	(*MediaItem)(nil),             // 8: grpc.MediaItem
-	(*UUID)(nil),                  // 9: grpc.UUID
-	(*timestamppb.Timestamp)(nil), // 10: google.protobuf.Timestamp
+	(Sort)(0),                     // 1: grpc.Sort
+	(*Media)(nil),                 // 2: grpc.Media
+	(*New)(nil),                   // 3: grpc.New
+	(*NewsList)(nil),              // 4: grpc.NewsList
+	(*ListStatusFilter)(nil),      // 5: grpc.ListStatusFilter
+	(*ListRequest)(nil),           // 6: grpc.ListRequest
+	(*InfoRequest)(nil),           // 7: grpc.InfoRequest
+	(*String)(nil),                // 8: grpc.String
+	(*MediaItem)(nil),             // 9: grpc.MediaItem
+	(*UUID)(nil),                  // 10: grpc.UUID
+	(*timestamppb.Timestamp)(nil), // 11: google.protobuf.Timestamp
 }
 var file_new_proto_depIdxs = []int32{
-	8,  // 0: grpc.Media.Media:type_name -> grpc.MediaItem
-	9,  // 1: grpc.New.Id:type_name -> grpc.UUID
+	9,  // 0: grpc.Media.Media:type_name -> grpc.MediaItem
+	10, // 1: grpc.New.Id:type_name -> grpc.UUID
 	0,  // 2: grpc.New.Status:type_name -> grpc.Status
-	1,  // 3: grpc.New.Media:type_name -> grpc.Media
-	10, // 4: grpc.New.CreatedAt:type_name -> google.protobuf.Timestamp
-	10, // 5: grpc.New.UpdatedAt:type_name -> google.protobuf.Timestamp
-	2,  // 6: grpc.NewsList.News:type_name -> grpc.New
+	2,  // 3: grpc.New.Media:type_name -> grpc.Media
+	11, // 4: grpc.New.CreatedAt:type_name -> google.protobuf.Timestamp
+	11, // 5: grpc.New.UpdatedAt:type_name -> google.protobuf.Timestamp
+	3,  // 6: grpc.NewsList.News:type_name -> grpc.New
 	0,  // 7: grpc.ListStatusFilter.Status:type_name -> grpc.Status
-	0,  // 8: grpc.ListRequest.Status:type_name -> grpc.Status
-	5,  // 9: grpc.News.List:input_type -> grpc.ListRequest
-	3,  // 10: grpc.News.List:output_type -> grpc.NewsList
-	10, // [10:11] is the sub-list for method output_type
-	9,  // [9:10] is the sub-list for method input_type
-	9,  // [9:9] is the sub-list for extension type_name
-	9,  // [9:9] is the sub-list for extension extendee
-	0,  // [0:9] is the sub-list for field type_name
+	1,  // 8: grpc.ListRequest.Sort:type_name -> grpc.Sort
+	10, // 9: grpc.ListRequest.Author:type_name -> grpc.UUID
+	0,  // 10: grpc.ListRequest.Status:type_name -> grpc.Status
+	6,  // 11: grpc.News.List:input_type -> grpc.ListRequest
+	4,  // 12: grpc.News.List:output_type -> grpc.NewsList
+	12, // [12:13] is the sub-list for method output_type
+	11, // [11:12] is the sub-list for method input_type
+	11, // [11:11] is the sub-list for extension type_name
+	11, // [11:11] is the sub-list for extension extendee
+	0,  // [0:11] is the sub-list for field type_name
 }
 
 func init() { file_new_proto_init() }
@@ -719,7 +771,7 @@ func file_new_proto_init() {
 		File: protoimpl.DescBuilder{
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_new_proto_rawDesc,
-			NumEnums:      1,
+			NumEnums:      2,
 			NumMessages:   7,
 			NumExtensions: 0,
 			NumServices:   1,
